--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
          <td style="vertical-align: top; padding-left: 7.5px;">
           <div class="se-div" style="font-family: &quot;Noto Sans KR&quot;, sans-serif; line-height: 1.7;">
            <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; color: rgb(0, 0, 0);" data-href="https://goodlight1234.github.io/people/" data-hyperlink-id="se_f4453543-be3d-48a1-bcb0-a7b796e8d22d" data-saferedirecturl="https://www.google.com/url?q=https://goodlight1234.github.io/people/&amp;source=gmail&amp;ust=1756866069273000&amp;usg=AOvVaw2ZTKhJUTBXF1cueJuHzhYa" rel="noopener" target="_blank" href="https://goodlight1234.github.io/people/"><span style="font-weight: bold; font-size: 20px;">사내행사</span></a></p>
-           <p style="text-align: justify; line-height: 1.5; padding: 0px; margin: 0px;"><br></p>
-           <p style="text-align: justify; line-height: 1.5; padding: 0px; margin: 0px;"><span>시노펙스는 2025년 6월 30일 창립 40주년을 맞아 ‘SYNERGY INNOVATION DAY’를 열었습니다. 시상식, 장기근속자 포상, AI 경진대회 등을 통해 지난 발자취를 돌아보고 앞으로의 비전을 함께 다짐하는 자리였습니다.</span></p>
+     
+           <p style="font-size: 14px;text-align: justify; line-height: 1.5; padding: 0px; margin: 5px;"><span>시노펙스는 2025년 6월 30일 창립 40주년을 맞아 ‘SYNERGY INNOVATION DAY’를 열었습니다. 시상식, 장기근속자 포상, AI 경진대회 등을 통해 지난 발자취를 돌아보고 앞으로의 비전을 함께 다짐하는 자리였습니다.</span></p>
            <div class="se-div" style="text-align: right; margin-top: 15px;">
             <p style="line-height: 1.5; padding: 0px; margin: 0px;"><a style="text-decoration: underline; font-size: 12px; color: rgb(116, 117, 121);" data-href="https://goodlight1234.github.io/people/" data-hyperlink-id="se_9201a2b7-8584-4080-b7d1-4e6b47f3f898" data-saferedirecturl="https://www.google.com/url?q=https://goodlight1234.github.io/people/&amp;source=gmail&amp;ust=1756866069273000&amp;usg=AOvVaw2ZTKhJUTBXF1cueJuHzhYa" rel="noopener" target="_blank" href="https://goodlight1234.github.io/people/"><span>&gt;&gt;&gt;자세히 보기</span></a></p>
            </div>
